# agentic-trip-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/instructions/: coding-style.instructions.md  testing.instructions.md
alembic/: env.py
alembic/versions/: 20260529_0001_initial.py  20260530_0001_create_users_table.py  20260610_0001_create_threads_table.py  20260610_0002_create_messages_table.py  20260610_0003_add_is_active_to_users.py
docs/: CODING_STYLE.md  PLAN.md  TESTING.md
src/trip_planner/: __init__.py  config.py  logging_config.py  main.py
src/trip_planner/agents/: graph.py  state.py
src/trip_planner/api/: dependencies.py
src/trip_planner/api/routes/: auth.py  health.py  threads.py  trips.py  users.py
src/trip_planner/core/: database.py
src/trip_planner/models/: __init__.py  message.py  thread.py  user.py
src/trip_planner/repositories/: message_repository.py  thread_repository.py  user_repository.py
src/trip_planner/schemas/: auth.py  clarification.py  threads.py  trips.py
src/trip_planner/services/: auth_service.py
src/trip_planner/tools/: weather.py  web_search.py
tests/: conftest.py  test_health.py  test_main.py
tests/agents/: test_graph.py
tests/api/routes/: test_auth.py  test_health.py  test_threads.py  test_trips.py  test_users.py
tests/repositories/: test_message_repository.py  test_thread_repository.py  test_user_repository.py
tests/services/: test_auth_service.py
tests/tools/: test_weather.py
