[project]
name = "trip-planner"
version = "0.1.0"
description = "Agentic trip planner backend (FastAPI + LangGraph)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "python-json-logger>=2.0",
    "bcrypt>=4.2",
    "PyJWT>=2.9",
    "langgraph>=0.3",
    "langchain-openai>=0.3",
    "langsmith>=0.3",
    "langchain-tavily>=0.1",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/trip_planner/logging_config.py",
    "src/trip_planner/models/*",
    "**/__init__.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
